# viet-rag2-multitenant-assistant

./: .env.example  .gitattributes  .gitignore  CHUNKING_SUMMARY.md  README.md  ROADMAP.md  STRUCTURE_CHUNKING_GUIDE.md  analyze_pdf_structure.py  api.py  cli.py  docker-compose.yaml  faq_sample.xlsx  frontend_test.html  generate_faq_sample.py  ingest.py  ingest_global.py  model_test.py  query.py  read_presentation.py  reproduce_toxic.py  requirements.lock.txt  requirements.txt  sườn.docx  test.py  test_chunking.py  test_chunking_complete.py
app/: __init__.py
app/api/: __init__.py  deps.py  knowledge.py  main.py  owner_console.py
apps/: __init__.py  api.py
data/: Log_phat_trien.docx  giai đoạn phát triển.docx
docs/: backend_owner_console_backend.md  backend_owner_mvp.md
evaluation/: README.md  restructure_repo.ps1
evaluation/rag_eval/: README.md  evals.py  pyproject.toml  rag.py  run_evals_agent.ps1
scripts/: build_integrated_knowledge_maps.py  cli.py  data_extract.py  enrich_courses.py  eval_day8.py  eval_discount_tool.py  eval_pipeline.py  eval_rageval.py  generate_testset.py  ingest.py  ingest_global.py  pdf_to_markdown_heuristic.py  preview_chunking.py  query.py  upload_to_chromadb.py
src/: chunking_strategies.py  config.py  data_loader.py  domain_guard.py  embedding_model.py  fix.py  incontext_ralm.py  ingest_pipeline.py  lexical_bm25.py  rag_engine.py  smalltalk.py  vector_store.py
web/: admin.css  admin.html  admin.js  agent.css  agent.html  agent.js  appjs.js  frontend.html  frontend_test.html  owner.css  owner.html  owner.js  style.css
(+54 files in other folders)
