[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viet-rag-rag-eval"
version = "0.1.0"
description = "RAGAS evaluation (app-backed RAG)"
requires-python = ">=3.11,<3.12"
dependencies = [
  "ragas[all]>=0.3.0",
  "openai>=1.0.0",
]

[project.optional-dependencies]
app = [
  # App-backed RAG (Qdrant + LlamaIndex). Keep versions aligned with repo requirements.txt.
  "llama-index==0.14.5",
  "llama-index-embeddings-huggingface==0.6.1",
  "llama-index-vector-stores-qdrant==0.8.6",
  "qdrant-client==1.15.1",
  "python-dotenv>=1.0.0",
  "numpy>=1.26",
  "sentence-transformers>=2.6",
]

[tool.setuptools]
py-modules = []

